browser/themes/gnomestripe/browser/browser.css
@import url("chrome://global/skin/");

@namespace url("http://www.mozilla.org/keymaster/gatekeeper/there.is.only.xul");

#menubar-items {
  -moz-box-orient: vertical; 
}

#menubar-items > menubar {
  -moz-box-flex: 1; 
}

#PersonalToolbar {
  min-height: 26px;
}




#navigator-toolbox {
  margin-bottom: -1px;
}

.tabbrowser-strip {
  margin-top: 1px;
}



#searchbar .searchbar-dropmarker menuseparator + menuitem { 
-moz-padding-start: 4px; 
}

#searchbar[empty="true"] .searchbar-textbox {
  color: GrayText;
}



toolbarbutton.bookmark-item {
  margin: 0;
  min-width: 0;
  max-width: 13em;
  padding: 2px 3px;
}

toolbarbutton.bookmark-item-microsummarized {
  max-width: 20em;
}

toolbarbutton.bookmark-item:hover:active,
toolbarbutton.bookmark-item[open="true"] {
  padding-top: 3px;
  padding-bottom: 1px;
  -moz-padding-start: 4px;
  -moz-padding-end: 2px;
}

.bookmark-item > .toolbarbutton-icon {
  width: 16px;
  height: 16px;
}


.bookmark-item > .toolbarbutton-text {
  display: -moz-box !important;
}

.bookmark-item > .toolbarbutton-menu-dropmarker {
  display: none;
}

#wrapper-personal-bookmarks .toolbarpaletteitem-box {
  width: 16px;
  height: 16px;
  background: url("chrome://browser/skin/Bookmarks-folder.png") no-repeat !important;
}

#wrapper-search-container .searchbar-textbox {
  -moz-user-input: disabled;
  -moz-user-focus: normal;
}

.bookmarks-toolbar-customize {
  display: none;
  max-width: 15em !important;
}

toolbarpaletteitem[place="toolbar"] .bookmarks-toolbar-customize {
  display: -moz-box;
}

toolbarpaletteitem[place="toolbar"] .bookmarks-toolbar-overflow-items {
  visibility: hidden;
}

toolbarpaletteitem[place="toolbar"] .bookmarks-toolbar-items {
  visibility: hidden;
}

toolbarpaletteitem[place="toolbar"] .places-toolbar-items {
  display: none;
}



menu.bookmark-item,
menuitem.bookmark-item {
  min-width: 0;
  max-width: 26em;
}

.bookmark-item > .menu-iconic-left > .menu-iconic-icon {
  width: 16px;
  height: 16px;
}



#bookmarksMenuPopup > menuitem > .menu-text,
menupopup[type="places"] > menuitem > .menu-text { 
  


  -moz-margin-start: 16px !important;
}




.bookmark-item[dragover-left="true"] {
  -moz-border-left-colors: #000000;
}
.bookmark-item[dragover-right="true"] {
  -moz-border-right-colors: #000000;
}
.bookmark-item[dragover-top="true"] {
  -moz-border-top-colors: #000000;
}
.bookmark-item[dragover-bottom="true"] {
  -moz-border-bottom-colors: #000000;
}



.bookmark-item  {
  list-style-image: url("chrome://global/skin/icons/folder-item.png");
  -moz-image-region: rect(0px, 16px, 16px, 0px)
}

.bookmark-item[container="true"] {
  -moz-image-region: rect(0px, 32px, 16px, 16px) !important;
}

.bookmark-item[open="true"],
.bookmark-item[container="true"][open="true"] {
  -moz-image-region: rect(16px, 32px, 32px, 16px) !important;
}



.bookmark-item[livemark="true"] { 
  list-style-image: url("chrome://browser/skin/livemark-item.png");
}

.bookmark-item[livemark="true"][chromedir="rtl"] { 
  list-style-image: url("chrome://browser/skin/livemark-item-rtl.png");
}

.bookmark-item[type="menu"][livemark="true"] { 
  -moz-image-region: rect(0px, 48px, 16px, 32px) !important;
}

.bookmark-item[type="menu"][livemark="true"][open="true"] { 
  -moz-image-region: rect(16px, 48px, 32px, 32px) !important;
}



.toolbarbutton-1 {
  -moz-box-orient: vertical;
  min-width: 0px;
  list-style-image: url("chrome://browser/skin/Toolbar.png");
}

.toolbarbutton-1 .toolbarbutton-icon {
  -moz-margin-end: 0px;
}

toolbar[mode="full"] .toolbarbutton-1 {
  min-width: 57px;
}

.toolbarbutton-1, .toolbarbutton-menubutton-button {
  padding: 5px;
}

.toolbarbutton-1:hover:active:not([disabled]),
.toolbarbutton-1[open="true"], 
.toolbarbutton-menubutton-button:hover:active:not([disabled]),
.toolbarbutton-menubutton-button[open="true"] {
  padding-top: 5px;
  padding-bottom: 5px;
  -moz-padding-start: 6px;
  -moz-padding-end: 4px;
}

.toolbarbutton-1[checked="true"] {
  padding-top: 5px !important;
  padding-bottom: 5px !important;
  -moz-padding-start: 6px !important;
  -moz-padding-end: 4px !important;
}

.toolbarbutton-1[type="menu-button"] {
  padding: 0px !important;
}

.toolbarbutton-menubutton-stack,
.toolbarbutton-menubutton-button,
.toolbarbutton-menubutton-stack:hover,
.toolbarbutton-menubutton-button:hover,
.toolbarbutton-menubutton-stack:hover:active,
.toolbarbutton-menubutton-button:hover:active {
  margin: 0 !important;
  display: -moz-box;
}





#back-button, #forward-button[chromedir="rtl"] {
  -moz-image-region: rect(0px 24px 24px 0px);
}

#back-button[buttonover="true"], #forward-button[buttonover="true"][chromedir="rtl"] {
  -moz-image-region: rect(24px 24px 48px 0px);
}
#back-button[disabled="true"], #forward-button[disabled="true"][chromedir="rtl"] {
  -moz-image-region: rect(48px 24px 72px 0px) !important;
}



#forward-button, #back-button[chromedir="rtl"] {
  -moz-image-region: rect(0px 48px 24px 24px);
  -moz-padding-end: 2px;
}
#forward-button[buttonover="true"], #back-button[buttonover="true"][chromedir="rtl"] {
  -moz-image-region: rect(24px 48px 48px 24px);
}
#forward-button[disabled="true"], #back-button[disabled="true"][chromedir="rtl"] {
   -moz-image-region: rect(48px 48px 72px 24px) !important;
}



#stop-button {
  -moz-image-region: rect(0px 72px 24px 48px);
}
#stop-button:hover {
  -moz-image-region: rect(24px 72px 48px 48px);
}
#stop-button[disabled="true"] {
  -moz-image-region: rect(48px 72px 72px 48px) !important;
}



#reload-button {
  -moz-image-region: rect(0px 96px 24px 72px);
}
#reload-button:hover {
  -moz-image-region: rect(24px 96px 48px 72px);
}
#reload-button[disabled="true"] {
  -moz-image-region: rect(48px 96px 72px 72px);
}



#home-button {
  -moz-image-region: rect(0px 120px 24px 96px);
}
#home-button:hover {
  -moz-image-region: rect(24px 120px 48px 96px);
}
#home-button[disabled="true"] {
  -moz-image-region: rect(48px 120px 72px 96px);
}
/* ... */

