Bug 337174: "Manage Search Engines" misaligned in menu, patch by Pam Greene <pamg.bugs@gmail.com>, r=bryner
UltraBlame original commit: 7030145ad25a79010da29f415e29323c80538137

--- a/browser/themes/gnomestripe/browser/browser.css
+++ b/browser/themes/gnomestripe/browser/browser.css
@@ -68,8 +68,8 @@
 
 
 
-#searchbar .searchbar-dropmarker menuseparator + menuitem { 
--moz-padding-start: 4px; 
+#searchbar .searchbar-popup .open-engine-manager {
+  -moz-padding-start: 4px; 
 }
 
 #searchbar[empty="true"] .searchbar-textbox {
